<resources>
    <string name="app_name">Projeto Final</string>
    <string name="botao_entrar">Entrar</string>
    <string name="texto_cadastro">CRIAR CONTA</string>
    <string name="titulo_cadastro">CADASTRE-SE</string>
    <string name="botao_cadastre_se">Cadastrar</string>
    <string name="esquecer_senha">RECUPERAR SENHA</string>
    <string name="redefinir_senha">Redefinir Senha</string>
    <string name="redefinir">Redefinir</string>
    <string name="informativo">Insira seu email para a \nrecuperação da sua senha</string>
    <string name="deslogar">Deslogar</string>
    <string name="esqueceuSenha">Esqueceu sua senha?</string>
    <string name="login">LOGIN</string>
    <string name="title_activity_tela_menu">CONTROLE DE VEÍCULOS</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="carro">VEÍCULOS</string>
    <string name="historico">Histórico</string>
    <string name="text_veiculo1">CARRO 1</string>
    <string name="text_veiculo2">CARRO 2</string>
    <string name="text_veiculo3">CARRO 3</string>
    <string name="ruv">Ruv</string>
    <string name="senai">Senai</string>
    <string name="sair">Sair</string>
    <string name="menu_aberto">Aberto</string>
    <string name="menu_fechado">Fechado</string>
    <string name="agendamento">Agendamento</string>
    <string name="escolha_carro">SELECIONE O CARRO QUE DESEJA UTILIZAR</string>
    <string name="prosseguir">Prosseguir</string>
    <string name="modelo_carro">HB20s</string>
    <string name="carro1">MARCA: HYUNDAI\nANO: 2022\nRENAVAM: 42533017705\nPLACA: JEL-1316\nCOR: PRATA</string>
    <string name="carro2">MARCA: HYUNDAI\nANO: 2022\nRENAVAM: 80667568725\nPLACA: AJZ-2418\nCOR: PRATA</string>
    <string name="carro3">MARCA: HYUNDAI\nANO: 2022\nRENAVAM: 32505483520\nPLACA: MZB-6216\nCOR: PRATA</string>
    <string name="calendario">Calendário</string>
    <string name="selecione_data">Selecione a data que deseja\nreservar o veículo</string>
    <string name="title_activity_tela_agendamento">tela_agendamento</string>
    <string name="passoApasso">Olá usuário!\nVocê seguirá 3 fase de etapas com as \ninformações necessárias que precisarão \nser inseridas para realizar o\nagendamento.\n\nClique no botão a baixo para prosseguir</string>
    <string name="avançar">AVANÇAR</string>
    <string name="entidade">Entidade</string>
    <string name="unidade">Unidade</string>
    <string name="centro">Centro</string>
    <string name="nome_motorista">Nome do requisitante</string>
    <string name="data_emissao">Data de emissão</string>
    <string name="data_prevista">Data prevista</string>
    <string name="horario">Horário</string>
    <string name="nome_passageiro">Nome do passageiro</string>
    <string name="localidade">Localidade</string>
    <string name="servico_executar">Serviço à executar</string>
    <string name="autorizacao">Autorização Nº: </string>
    <string name="data">Data</string>
    <string name="email_inst">Email institucional</string>
    <string name="observacao">Observações</string>
    <string name="historico_ruv">RUV Preenchida</string>
    <string name="ola">OLÁ, SEJA BEM-VINDO!\n FAÇA SEU AGENDAMENTO \nCOM RAPIDEZ E EFICIÊNCIA</string>
    <string name="concluido">AGENDAMENTO REALIZADO!\nAGUARDE SEU PEDIDO SER AUTORIZADO</string>
    <string name="voltar">VOLTAR INÍCIO</string>
    <string name="desenvolvedores">By\nLucas Castro, Ana Lobo e Lucas Souza</string>
    <string name="info_historico">TENHA ACESSO A SEU AGENDAMENTO MAIS RECENTE</string>
    <string name="relatorio">RELATÓRIO</string>
    <string name="carroSelecionado">CARRO:</string>
    <string name="diaSelecionado">DIA:</string>
    <string name="entidadeH">ENTIDADE:</string>
    <string name="unidadeH">UNIDADE:</string>
    <string name="centroH">CENTRO:</string>
    <string name="passageiroH">PASSAGEIRO:</string>
    <string name="localidadeH">LOCALIDADE:</string>
    <string name="servicoH">SERVIÇO EXECUTE:</string>
    <string name="horarioH">HORÁRIO:</string>
    <string name="DprevistaH">DATA PREVISTA:</string>
    <string name="DemissaoH">DATA EMISSÃO:</string>
    <string name="obresevacoesH">OBSERVAÇÕES:</string>


</resources>