<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_senai">

    <fragment
        android:id="@+id/nav_senai"
        android:name="com.ALL.projetofinal1.ui.senai.SenaiFragment"
        android:label="@string/senai"
        tools:layout="@layout/fragment_senai" />

    <fragment
        android:id="@+id/nav_historico"
        android:name="com.ALL.projetofinal1.ui.historico.HistoricoFragment"
        android:label="@string/historico"
        tools:layout="@layout/fragment_historico" />

    <fragment
        android:id="@+id/nav_veiculos"
        android:name="com.ALL.projetofinal1.ui.agendamento.AgendamentoFragment"
        android:label="@string/carro"
        tools:layout="@layout/fragment_agendamento" />
</navigation>