<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/background"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TelaAgendamento">

  <androidx.appcompat.widget.AppCompatButton
      android:id="@+id/bt_prosseguir2"
      style="@style/botao_prosseguir"
      android:layout_width="180dp"
      android:layout_height="45dp"
      android:onClick="chamaCalendario"
      android:text="@string/avançar"
      android:textColor="@color/black"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.498"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/conteinerComponents" />

  <ImageButton
      android:id="@+id/bt_voltar_menu"
      android:layout_width="61dp"
      android:layout_height="55dp"
      android:layout_marginStart="4dp"
      android:layout_marginTop="28dp"
      android:backgroundTint="#00FFFFFF"
      android:onClick="chamaMenu"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      app:srcCompat="@drawable/icon_voltar" />

  <View
      android:id="@+id/conteinerComponents"
      style="@style/conteiner_veiculos"
      android:layout_width="366dp"
      android:layout_height="486dp"
      android:layout_marginTop="20dp"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.488"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/tv_veiculo" />

  <ImageView
      android:id="@+id/img_carro2"
      android:layout_width="140dp"
      android:layout_height="110dp"
      android:layout_marginTop="32dp"
      android:backgroundTint="#00FFFFFF"
      android:scaleType="fitCenter"
      android:src="@drawable/icone_carro_senai"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.158"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@id/img_carro1" />

  <TextView
      android:id="@+id/tv_escolha_carro"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="160dp"
      android:fontFamily="sans-serif-condensed"
      android:text="@string/escolha_carro"
      android:textColor="#535050"
      android:textSize="16sp"
      android:textStyle="bold"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.496"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent" />

  <ImageView
      android:id="@+id/img_carro3"
      android:layout_width="140dp"
      android:layout_height="110dp"
      android:layout_marginTop="32dp"
      android:backgroundTint="#00FFFFFF"
      android:scaleType="fitCenter"
      android:src="@drawable/icone_carro_senai"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.158"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@id/img_carro2" />

  <ImageView
      android:id="@+id/img_carro1"
      android:layout_width="140dp"
      android:layout_height="110dp"
      android:layout_marginTop="32dp"
      android:backgroundTint="#00FFFFFF"
      android:scaleType="fitCenter"
      android:src="@drawable/icone_carro_senai"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.158"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/tv_escolha_carro" />

  <ImageView
      android:id="@+id/imageView"
      android:layout_width="70dp"
      android:layout_height="70dp"
      android:layout_marginStart="104dp"
      android:src="@drawable/icon_carro"
      android:tint="#F4F4F4"
      app:layout_constraintBottom_toBottomOf="@+id/bt_voltar_menu"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.005"
      app:layout_constraintStart_toEndOf="@+id/bt_voltar_menu"
      app:layout_constraintTop_toTopOf="@+id/bt_voltar_menu"
      app:layout_constraintVertical_bias="0.0" />

  <TextView
      android:id="@+id/tv_veiculo"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:fontFamily="sans-serif-condensed-light"
      android:text="@string/carro"
      android:textColor="#FFFFFF"
      android:textSize="18sp"
      android:textStyle="bold"
      app:layout_constraintEnd_toEndOf="@+id/imageView"
      app:layout_constraintStart_toStartOf="@+id/imageView"
      app:layout_constraintTop_toBottomOf="@+id/imageView" />

  <RadioGroup
      android:id="@+id/radioGroup"
      android:layout_width="165dp"
      android:layout_height="403dp"
      app:layout_constraintBottom_toBottomOf="@+id/conteinerComponents"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.38"
      app:layout_constraintStart_toEndOf="@+id/img_carro2"
      app:layout_constraintTop_toBottomOf="@+id/tv_escolha_carro"
      app:layout_constraintVertical_bias="0.666">

    <RadioButton
        android:id="@+id/tv_carro1"
        android:layout_width="match_parent"
        android:layout_height="114dp"
        android:fontFamily="sans-serif-condensed"
        android:text="@string/carro1"
        android:textStyle="bold" />

    <RadioButton
        android:id="@+id/tv_carro2"
        android:layout_width="match_parent"
        android:layout_height="139dp"
        android:fontFamily="sans-serif-condensed"
        android:text="@string/carro2"
        android:textStyle="bold" />

    <RadioButton
        android:id="@+id/tv_carro3"
        android:layout_width="match_parent"
        android:layout_height="141dp"
        android:fontFamily="sans-serif-condensed"
        android:text="@string/carro3"
        android:textStyle="bold" />
  </RadioGroup>

  <TextView
      android:id="@+id/tv_carro_selecionado"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="32dp"
      android:text=""
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.498"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="@+id/tv_escolha_carro" />

  <TextView
      android:id="@+id/tv_Carro1"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/text_veiculo1"
      android:textColor="#000000"
      android:textStyle="bold"
      app:layout_constraintBottom_toBottomOf="@+id/img_carro1"
      app:layout_constraintEnd_toEndOf="@+id/img_carro1"
      app:layout_constraintStart_toStartOf="@+id/img_carro1"
      app:layout_constraintTop_toTopOf="@+id/img_carro1"
      app:layout_constraintVertical_bias="1.0" />

  <TextView
      android:id="@+id/tv_Carro2"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/text_veiculo2"
      android:textColor="#000000"
      android:textStyle="bold"
      app:layout_constraintBottom_toBottomOf="@+id/img_carro2"
      app:layout_constraintEnd_toEndOf="@+id/img_carro2"
      app:layout_constraintStart_toStartOf="@+id/img_carro2"
      app:layout_constraintTop_toTopOf="@+id/img_carro2"
      app:layout_constraintVertical_bias="1.0" />

  <TextView
      android:id="@+id/tv_Carro3"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/text_veiculo3"
      android:textColor="#000000"
      android:textStyle="bold"
      app:layout_constraintBottom_toBottomOf="@+id/img_carro3"
      app:layout_constraintEnd_toEndOf="@+id/img_carro3"
      app:layout_constraintStart_toStartOf="@+id/img_carro3"
      app:layout_constraintTop_toTopOf="@+id/img_carro3"
      app:layout_constraintVertical_bias="1.0" />

</androidx.constraintlayout.widget.ConstraintLayout>